style(v0.2.0): Scathiard's UI fix (panel layout rewrite + 9-slice) [PanelLayoutTest pending update]