@@ -1,43 +1,84 @@
 package dev.scathiard.feedmepackages.client;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 
-/** Pure geometry shared by drawing, mouse routing, JEI exclusion, and layout tests. */
-public record PanelLayout(Rect bounds, List<CellBox> cells, Rect slider, Rect returnBar, int firstRow, int visibleRows, int totalRows, int footerY, boolean compact) {
-    public static final int WIDTH = 46, ROW = 18, HEADER = 36, FOOTER = 6, SLIDER = 22, BAR = 49;
+/** Geometry in GUI pixels; shared by rendering, mouse routing and JEI. */
+public record PanelLayout(Rect bounds, List<CellBox> cells, Rect slider, Rect returnBar,
+        int firstRow, int visibleRows, int totalRows, int footerY, boolean compact) {
+    // panel.png: two 22-pixel end caps surround the 18-pixel inventory cells.
+    public static final int ROW = 18, SIDE = 22, WIDTH = 2 * ROW + 2 * SIDE;
+    public static final int HEADER = 18, BAR = 18, FOOTER = 24, SLIDER = 22;
+    public static final int MARGIN = 4, GAP = 4, BOOK_WIDTH = 177, MAX_ROWS = 6;
+
     public record Rect(int x, int y, int width, int height) {
-        public boolean contains(double mx, double my) { return mx >= x && my >= y && mx < x + width && my < y + height; }
+        public boolean contains(double mx, double my) {
+            return mx >= x && my >= y && mx < x + width && my < y + height;
+        }
     }
     public record CellBox(int slot, Rect bounds) {
         public Rect dot() { return new Rect(bounds.x() + 13, bounds.y() + 1, 4, 5); }
     }
-    public Rect address() { return new Rect(bounds.x() + 11, bounds.y() + 3, bounds.width() - 16, 18); }
-    public static int preferredColumns(int count) { return Math.max(2, (count + 5) / 6); }
-    public static int preferredWidth(int count) { return preferredColumns(count) * ROW + 10; }
     public PanelLayout { cells = List.copyOf(cells); }
-    public static PanelLayout compute(int screenHeight, int left, int top, int count, int firstRow, int expanded, boolean bookOpen) {
-        int columns = Math.min(preferredColumns(count), Math.max(2, (left - 18 - (bookOpen ? 177 : 0)) / ROW));
-        int width = columns * ROW + 10;
-        int x = left - width - 4 - (bookOpen ? 177 : 0);
-        if (x < 4) return new PanelLayout(new Rect(4, Math.max(4, top), 18, 18), List.of(), null, null, 0, 0, (count + 1) / 2, 0, true);
+    public Rect address() {
+        return new Rect(bounds.x() + 11, bounds.y() + 1, bounds.width() - 22, 13);
+    }
+    public Rect scrollbar() {
+        return new Rect(bounds.x() + bounds.width() - 13, bounds.y() + HEADER,
+                2, visibleRows * ROW);
+    }
+    public static int preferredColumns(int count) {
+        return Math.max(2, (Math.max(0, count) + MAX_ROWS - 1) / MAX_ROWS);
+    }
+    public static int preferredWidth(int count) { return preferredColumns(count) * ROW + 2 * SIDE; }
+    private static int clamp(int value, int min, int max) { return Math.max(min, Math.min(value, max)); }
+
+    public static PanelLayout compute(int screenHeight, int left, int top, int count,
+            int firstRow, int expanded, boolean bookOpen) {
+        count = Math.max(0, count);
+        int book = bookOpen ? BOOK_WIDTH : 0;
+        int fittingColumns = (left - book - GAP - MARGIN - 2 * SIDE) / ROW;
+        int fittingRows = (screenHeight - 2 * MARGIN - HEADER - BAR - FOOTER) / ROW;
+        if (fittingColumns < 2 || fittingRows < 1) {
+            int y = Math.max(MARGIN, Math.min(top, screenHeight - MARGIN - ROW));
+            return new PanelLayout(new Rect(MARGIN, y, ROW, ROW), List.of(), null, null,
+                    0, 0, Math.max(1, (count + 1) / 2), y, true);
+        }
+        int columns = Math.min(preferredColumns(count), fittingColumns);
+        int width = columns * ROW + 2 * SIDE;
+        int x = left - book - GAP - width;
         int total = Math.max(1, (count + columns - 1) / columns);
-        // The slider is an overlay: it never reserves space, shifts rows, or grows the panel.
-        int rows = Math.max(1, Math.min(Math.min(total, 6), (screenHeight - 8 - HEADER - FOOTER - BAR) / ROW));
-        int height = HEADER + FOOTER + rows * ROW + BAR, y = Math.max(4, Math.min(top, screenHeight - height - 4));
-        int first = Math.clamp(firstRow, 0, Math.max(0, total - rows));
-        if (expanded >= 0) first = Math.clamp(first, Math.max(0, expanded / columns - rows + 1), expanded / columns);
-        List<CellBox> cells = new ArrayList<>(); Rect slider = null;
+        int rows = Math.min(Math.min(total, MAX_ROWS), fittingRows);
+        int height = HEADER + rows * ROW + BAR + FOOTER;
+        int y = clamp(top, MARGIN, screenHeight - MARGIN - height);
+        int first = clamp(firstRow, 0, total - rows);
+        boolean hasSelection = expanded >= 0 && expanded < count;
+        if (hasSelection) {
+            int selectedRow = expanded / columns;
+            first = clamp(first, Math.max(0, selectedRow - rows + 1), Math.min(selectedRow, total - rows));
+        }
+        List<CellBox> cells = new ArrayList<>();
+        Rect slider = null;
+        int gridBottom = y + HEADER + rows * ROW;
         for (int row = first; row < first + rows; row++) {
             int cy = y + HEADER + (row - first) * ROW;
             for (int column = 0; column < columns; column++) {
                 int slot = row * columns + column;
-                if (slot < count) cells.add(new CellBox(slot, new Rect(x + 4 + column * ROW, cy, ROW, ROW)));
+                if (slot < count) cells.add(new CellBox(slot,
+                        new Rect(x + SIDE + column * ROW, cy, ROW, ROW)));
             }
-            if (expanded >= 0 && row == expanded / columns)
-                slider = new Rect(x + 4 + Math.min(expanded % columns, columns - 2) * ROW,
-                        Math.min(cy + ROW, screenHeight - 4 - SLIDER), ROW * 2, SLIDER);
+            if (hasSelection && row == expanded / columns) {
+                // Overlay only; do not move cells or let the slider cover the return address.
+                int sy = rows == 1 ? gridBottom + BAR + 2
+                        : Math.max(y + HEADER, Math.min(cy + ROW, gridBottom - SLIDER));
+                slider = new Rect(x + SIDE + Math.min(expanded % columns, columns - 2) * ROW,
+                        sy, 2 * ROW, SLIDER);
+            }
         }
-        Rect returnBar = new Rect(x + 4, y + HEADER + rows * ROW, width - 8, BAR);
-        return new PanelLayout(new Rect(x, y, width, height), cells, slider, returnBar, first, rows, total, y + height - FOOTER, false);
+        // The label is already part of the bottom end caps (source rows 99..116).
+        Rect returnBar = new Rect(x + 15, gridBottom + 1, width - 32, BAR);
+        // Retain the record ABI; footerY now marks the end of the scrollable grid.
+        return new PanelLayout(new Rect(x, y, width, height), cells, slider, returnBar,
+                first, rows, total, gridBottom, false);
     }
 }
